--- a/book.html
+++ b/book.html
@@ -1,26 +1,27 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <script src="book_constructor.js"></script>
         <link rel='stylesheet' href='book_libaray.css'>
         <title>Book Libaray</title>
     </head>
 
     <body>
-        <section class='book-list'>
             <section class='add-book'>
-                <button ></button>
+                <button class='form-toggle' ></button>
                 <div>
-                    <form name='book-form' onsubmit="addBookToLibaray()">
+                    <form name='book-form'>
                         Title: <input type="text" name='title'>
                         Author:<input type="text" name='author'>
                         Amount of Pages:<input type="text" name='page-count'>
                         Read: <input type="radio" name='is-read' value='true'>
                         Not Read:<input type="radio" name='is-read' value='false'>
-                        <input type="submit" value="Add">
+                        <button class='book-submit'>Add</button>
                     </form>
                 </div>
-            </section>
+        </section>
+        
+        <section class='book-list'>
         </section>
     </body>
+    <script src="book_constructor.js"></script>
 </html>
