add local storage and storage removal

--- a/book.html
+++ b/book.html
@@ -6,10 +6,10 @@
     </head>
 
     <body>
-        <section class='book-form'>
+        <section class='book-form book-layout'>
             <button class='add-book'>New Book</button>
                 <div class='form-toggle'>
-                    <form name='book-form' class='book-form'>
+                    <form name='book-form' class='book-form book-layout'>
                         Title: <input type="text" name='title'>
                         Author:<input type="text" name='author'>
                         Amount of Pages:<input type="text" name='page-count'>
